# tempercent

./: .gitingore  README.md  app.py  main.py  pyproject.toml  requirements.txt
tempercent_app/: app.py  main.py
tempercent_app/static/css/: style.css
tempercent_app/templates/: index.html  result.html
