[tool.poetry]
name = "tempercent"
version = "0.1.0"
description = ""
authors = ["adam-gatherer <adam@gatherer.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.2"
requests = "2.25.1"
timezonefinder = "6.2.0"
uk-postcode-utils = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
